{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 757,
  "lineage": "5338406d-dcf6-93a8-34c2-6eab69f0ebcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edr_wg_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5f882be1900e43b",
            "arn": "arn:aws:ec2:eu-west-2:540622579701:instance/i-0182643f10c67e2c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0182643f10c67e2c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "edr_wg_wg_ssh_keye609f8f4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08973b58c33d88c03",
            "private_dns": "ip-192-168-2-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.185",
            "public_dns": "ec2-3-10-21-21.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.21.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5df1ab015d79713",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08633f796f51c4041",
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a151992bba721f57"
            ]
          },
          "dependencies": [
            "aws_key_pair.edr_wg_keypair",
            "aws_security_group.edr_wg_sg",
            "aws_subnet.edr_wg_public_subnet",
            "aws_vpc.edr_wg_vpc",
            "data.aws_ami.latest_ubuntu",
            "random_id.edr_wg_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edr_wg_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540622579701:internet-gateway/igw-0ead8eeadb0969b81",
            "id": "igw-0ead8eeadb0969b81",
            "owner_id": "540622579701",
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_vpc_igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_vpc_igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d987028a2daba45c"
          },
          "dependencies": [
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "edr_wg_public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ead8eeadb0969b81",
            "id": "r-rtb-08664d85db999e9ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08664d85db999e9ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.edr_wg_igw",
            "aws_route_table.edr_wg_public_subnet_rt",
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edr_wg_public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540622579701:route-table/rtb-08664d85db999e9ab",
            "id": "rtb-08664d85db999e9ab",
            "owner_id": "540622579701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_public_subnet_rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_public_subnet_rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d987028a2daba45c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "edr_wg_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036ee12a2f324e930",
            "route_table_id": "rtb-08664d85db999e9ab",
            "subnet_id": "subnet-08633f796f51c4041"
          },
          "dependencies": [
            "aws_route_table.edr_wg_public_subnet_rt",
            "aws_subnet.edr_wg_public_subnet",
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edr_wg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540622579701:security-group/sg-0a151992bba721f57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a151992bba721f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 13231,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 13231
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "82.21.53.106/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "edr_wg_sg",
            "name_prefix": "",
            "owner_id": "540622579701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "ed_wg_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "ed_wg_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d987028a2daba45c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edr_wg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540622579701:subnet/subnet-08633f796f51c4041",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08633f796f51c4041",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540622579701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_public_subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_public_subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d987028a2daba45c"
          },
          "dependencies": [
            "aws_vpc.edr_wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edr_wg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540622579701:vpc/vpc-0d987028a2daba45c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06c1c465626975945",
            "default_route_table_id": "rtb-0eae3ec743e8527bb",
            "default_security_group_id": "sg-0133a79962bc7778b",
            "dhcp_options_id": "dopt-948ffffc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d987028a2daba45c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eae3ec743e8527bb",
            "owner_id": "540622579701",
            "tags": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "Ed Randall | ed.randall@neo4j.com | +44 7766 741118",
              "Name": "edr_wg_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}